# potato-video

./: .gitignore  README.md
potato-video-native/: .gitignore  CMakeLists.txt  main.cpp
potato-video-native/src/: CMakeLists.txt  FmpegLib.h  StreamInfo.cpp  StreamInfo.h  library.cpp  library.h  main.cpp
potato-video-native/src/fmpeg/libavutil/: mathematics.cpp  mathematics.h
potato-video-native/src/potato/: FmpegLib.h  StreamInfo.h  library.cpp  library.h
potato-video-native/src/potato/common/: FmpegLib.h  StreamInfo.cpp  common_util.cpp  common_util.h
potato-video-native/src/potato/movie/: movie_concat.cpp  movie_concat.h  movie_cut.cpp  movie_cut.h  movie_scale.cpp  movie_scale.cpp.bak  movie_scale.h  watermark.cpp  watermark.h
potato-video-native/tests/: CMakeLists.txt
potato-video-native/tests/unit_tests/: test_example.cpp
